--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,139 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>FlickChat</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://kit.fontawesome.com/3689895c6d.js" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<meta charset="utf-8">
+	<title>FlickChat</title>
+	<base href="/">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<script src="https://kit.fontawesome.com/3689895c6d.js" crossorigin="anonymous"></script>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+<app-root>
+	<div class="root-container" id="index-root-loader">
+		<div class="loading-container">
+			<img src="/assets/images/logo-index.png" alt="Portal" class="logo"/>
+			<br/>
+			<div class="meter"><span style="width: 100%" id="progress-status"></span></div>
+			<div class="text">Loading our web app. Updating now will make for super fast page loads in a few moments!
+			</div>
+		</div>
+	</div>
+	<style>
+		html, body, .app-root {
+			height: 100%;
+		}
+
+		body {
+			background: #3A3A3A;
+			color: #808080;
+			font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+			font-display: fallback;
+			font-size: 14px;
+			overflow: hidden;
+		}
+
+		.root-container {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			height: 100%;
+		}
+
+		.logo {
+			max-width: 100%;
+			margin-bottom: 25px;
+		}
+
+		.loading-container {
+			width: 280px;
+			padding: 10px 0;
+			margin: auto;
+			text-align: center;
+			position: relative;
+			top: -50px; /* Pull it higher away from center */
+		}
+
+		.text {
+			font-size: 13px;
+			line-height: 1.7;
+		}
+
+		.meter {
+			height: 7px;
+			position: relative;
+			background: transparent;
+			border-radius: 50px;
+			box-shadow: inset 0 0 0 1px #979797;
+			margin-bottom: 18px;
+			overflow: hidden;
+		}
+
+		.meter > span {
+			display: block;
+			height: 100%;
+			border-radius: 50px;
+			background-color: #F05622;
+			position: relative;
+		}
+
+		.meter > span.transition {
+			transition: width 0.2s linear;
+		}
+	</style>
+	<script>
+		try {
+			var step = 1000;  // Milliseconds of each step
+			var counter = 0;
+			var interval;
+
+			// Increment progress bar
+			function incrementStep() {
+				var root = document.getElementById('index-root-loader');
+				if (!root) {
+					// Application loaded - clear interval
+					clearInterval(interval);
+					return;
+				}
+
+				var element = document.getElementById('progress-status');
+				var calc = counter * step / 100;
+				element.style.width = calc + '%';
+
+				if (calc >= 100) {
+					// 100% done
+					clearInterval(interval);
+
+					// Wait for 4 seconds and restart the animation
+					setTimeout(function () {
+						counter = 0;
+						startAnimation();
+					}, 6000);
+				}
+				counter++;
+
+				// Add transition class if not exists already
+				if (!element.className.match(/\btransition\b/)) {
+					setTimeout(function () {
+						element.className = "transition";
+					}, 1);
+				}
+			}
+
+			function startAnimation() {
+				interval = setInterval(incrementStep, step);
+			}
+
+			// Start animation after a delay - so 100% progress is shown in case if application files are already in cache
+			setTimeout(startAnimation, 500);
+		} catch (e) {
+			console.log('Some error in index loading animation');
+			console.log('Exception: ', e);
+		}
+	</script>
+</app-root>
 </body>
 </html>
